# halo

./: .gitignore  Anchor.toml  HALO.md  LICENSE  NEXT-STEPS.md  PROGRESS.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json
apps/demo/: App.tsx  app.json  package.json  tsconfig.json
apps/demo/assets/: README.md
apps/demo/src/: theme.ts
apps/demo/src/components/: HaloReportCard.tsx  ScenarioCard.tsx  TransactionPreview.tsx
apps/demo/src/lib/: halo-mock.ts
apps/demo/src/screens/: HomeScreen.tsx  ScenarioScreen.tsx
docs/: ARCHITECTURE.md  DEMO-SCRIPT.md  GTM.md  INTEGRATION.md  RECORD-DEMO.md  pitch-deck.html  pitch-deck.md
policies/: kamino-deposit-v1.json
programs/halo/: Cargo.toml
programs/halo/src/: error.rs  lib.rs  state.rs
programs/halo/src/instructions/: initialize_issuer.rs  issue_attestation.rs  mod.rs  register_policy.rs  revoke_policy.rs  rotate_issuer.rs  verify_attestation.rs
scripts/: deploy-devnet.sh  gen-keypair.sh  seed-policy.ts
tests/: halo.ts
